Refactored Beedle into COTWTrader, and implemented new trader Kilton. Added a new Criterion trigger, sounds for Kilton, and an advancement for trading with Kilton.